# autoperf

./: .gitignore  Cargo.toml
src/: aggregate.rs  main.rs  mkgroup.rs  pair.rs  profile.rs  search.rs  stats.rs  util.rs
