[package]
name = "autoperf"
description = "Automate the recording and instrumentation of programs with performance counters."
version = "0.9.5"
authors = [
    "Denny Lin <dennylin93@connect.hku.hk>",
    "Besmira Nushi <besmira.nushi@microsoft.com>",
    "Gerd Zellweger <mail@gerdzellweger.com>"
]
edition = '2018'
license = "MIT"
repository = "https://github.com/gz/autoperf"
documentation = "https://docs.rs/autoperf"

[dependencies]
pbr = "1.0.1"
log = "0.4"
env_logger = "0.6"
csv = "1"
lazy_static = "1"
perfcnt = "0.8"
toml = "0.5"
nom = "^1.2.3"
libc = "0.2.16"
clap = { version = "2", features = ["yaml"] }
x86 = { version = "0.47", features = ["performance-counter"] }
phf = "0.9.*"
itertools = "0.5"
serde = { version = "1", features = ["derive"] }
wait-timeout = "0.1"

[profile.release]
debug = true
